Exclude 'pr.*' branches from regular testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -145,3 +145,7 @@ script:
     --repo hunter-cache
     --cache-dir ${HOME}/.hunter/_Base/Cache
     --temp-dir ${HOME}/__TEMP_HUNTER
+
+branches:
+  except:
+    - /^pr\..*/
