add ogles_gpgpu to CMakeLists.txt for cache

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ elseif(LEVEL EQUAL 3)
   hunter_add_package(GTest)
   hunter_add_package(thread-pool-cpp)
   hunter_add_package(xgboost)
+  hunter_add_package(ogles_gpgpu)
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
