--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,10 @@ elseif(LEVEL EQUAL 3)
   hunter_add_package(GTest)
   hunter_add_package(thread-pool-cpp)
   hunter_add_package(xgboost)
-  hunter_add_package(ogles_gpgpu)
+  if(NOT MSVC)
+    # TODO: ogles_gpgpu is currently not building on windows hosts
+    hunter_add_package(ogles_gpgpu)
+  endif()
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
