--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,8 +26,10 @@ environment:
     # }
 
 # https://www.appveyor.com/docs/how-to/rdp-to-build-worker/
-init:
-  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+# See init and on_finish sections for remote desktop connection
+#
+#init:
+#  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
     
 install:
   # Python 3
@@ -75,5 +77,7 @@ branches:
     - /^pr\..*/
 
 # https://www.appveyor.com/docs/how-to/rdp-to-build-worker/
-on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))    
+# See init and on_finish sections for remote desktop connection
+#
+#on_finish:
+#  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))    
