--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,9 @@ elseif(LEVEL EQUAL 3)
   hunter_add_package(GTest)
   hunter_add_package(thread-pool-cpp)
   hunter_add_package(xgboost)
+  if(MSVC)
+    hunter_add_packages(glew)
+  endif()
   hunter_add_package(ogles_gpgpu)
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
