--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ elseif(LEVEL EQUAL 3)
   hunter_add_package(thread-pool-cpp)
   hunter_add_package(xgboost)
   if(MSVC)
-    hunter_add_packages(glew)
+    hunter_add_package(glew)
   endif()
   hunter_add_package(ogles_gpgpu)
 else()
