--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,8 @@ include("cmake/HunterGate.cmake")
 list(APPEND HUNTER_CACHE_SERVERS "https://github.com/elucideye/hunter-cache")
 
 HunterGate(
-  #URL "https://github.com/ruslo/hunter/archive/v0.16.24.tar.gz"
-  #SHA1 "00ab627d3d4fe5151e15b6ab2b1b1da17650984a"    
-  URL "https://github.com/headupinclouds/hunter/archive/ogles_gpgpu.msvc.fix2.tar.gz"
-  SHA1 "f26bd0d733aa1be71e8353017ce10719e4daa152"
+  URL "https://github.com/headupinclouds/hunter/archive/v0.16.25-rc1.tar.gz"
+  SHA1 "1bdc986b028f8aa37e12c0ba8e1610ba10de8b64"
   FILEPATH "${CMAKE_CURRENT_LIST_DIR}/config.cmake"
   )
 
