add flatbuffers package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ if(LEVEL EQUAL 1)
   hunter_add_package(dlib)
   hunter_add_package(spdlog)
   hunter_add_package(cereal)
+  hunter_add_package(flatbuffers)
 elseif(LEVEL EQUAL 2)
   hunter_add_package(OpenCV)
 elseif(LEVEL EQUAL 3)
