--- a/.travis.yml
+++ b/.travis.yml
@@ -115,9 +115,9 @@ install:
   - if [[ "`uname`" == "Linux" ]]; then travis_retry easy_install3 --user requests==2.10.0; fi
 
   # Install latest Polly toolchains and scripts
-  - wget https://github.com/ruslo/polly/archive/master.zip
-  - unzip master.zip
-  - POLLY_ROOT="`pwd`/polly-master"
+  - wget https://github.com/ruslo/polly/archive/new.android.zip
+  - unzip new.android.zip
+  - POLLY_ROOT="`pwd`/polly-new.android"
   - export PATH="${POLLY_ROOT}/bin:${PATH}"
 
   # Install dependencies (CMake, Android NDK)
