--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,9 @@ elseif(LEVEL EQUAL 3)
   hunter_add_package(xgboost)
   hunter_add_package(ogles_gpgpu)
   hunter_add_package(nlohmann-json) # test
+  if(ANDROID)
+    hunter_add_package(Android-SDK)
+  endif()
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
