--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,3 +81,5 @@ branches:
 #
 #on_finish:
 #  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))    
+
+# TEST
