--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,11 +38,13 @@ if(LEVEL EQUAL 1)
   hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
   hunter_add_package(Eigen)
   hunter_add_package(PNG)
-  hunter_add_package(TIFF)
   hunter_add_package(dlib)
   hunter_add_package(spdlog)
   hunter_add_package(cereal)
   hunter_add_package(flatbuffers)
+  if(APPLE OR ${is_linux} OR MSVC)
+    hunter_config(Jpeg)
+  endif()
 elseif(LEVEL EQUAL 2)
   hunter_add_package(OpenCV)
 elseif(LEVEL EQUAL 3)
