--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ if(LEVEL EQUAL 1)
   hunter_add_package(cereal)
   hunter_add_package(flatbuffers)
   if(APPLE OR ${is_linux} OR MSVC)
-    hunter_config(Jpeg)
+    hunter_add_package(Jpeg)
   endif()
 elseif(LEVEL EQUAL 2)
   hunter_add_package(OpenCV)
