skip imshow for ANDROID and IOS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,9 @@ endif()
 
 if(LEVEL EQUAL 1)
   #hunter_add_package(boost-pba)
-  hunter_add_package(imshow)
+  if(NOT (ANROID OR IOS))  
+    hunter_add_package(imshow)
+  endif()
   hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
   hunter_add_package(Eigen)
   hunter_add_package(PNG)
