--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ endif()
 if(LEVEL EQUAL 1)
   #hunter_add_package(boost-pba)
   # TODO: Update imshow package to avoid GL_BGR(A) enum for MSVC builds
-  if(NOT (ANROID OR IOS OR MSVC))
+  if(NOT (ANDROID OR IOS OR MSVC))
     hunter_add_package(imshow)
   endif()
   hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
