actually add boost-pba package this time…

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,11 @@ if(is_empty)
 endif()
 
 if(LEVEL EQUAL 1)
-  #hunter_add_package(boost-pba)
   # TODO: Update imshow package to avoid GL_BGR(A) enum for MSVC builds
   if(NOT (ANDROID OR IOS OR MSVC))
     hunter_add_package(imshow)
   endif()
+  hunter_add_package(boost-pba)  
   hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
   hunter_add_package(Eigen)
   hunter_add_package(PNG)
