--- a/.travis.yml
+++ b/.travis.yml
@@ -140,6 +140,7 @@ script:
     --verbose
     --discard 10
     --tail 200
+    --fwd DRISHTI_BUILD_OPENCV_WORLD=NO
 
   # Upload to server
   - git clone https://github.com/ruslo/hunter
