--- a/appveyor.yml
+++ b/appveyor.yml
@@ -66,7 +66,7 @@ install:
 
 build_script:
   # Build dependencies
-  - cmd: python %POLLY_ROOT%\bin\polly.py --toolchain "%TOOLCHAIN%" --verbose
+  - cmd: python %POLLY_ROOT%\bin\polly.py --toolchain "%TOOLCHAIN%" --verbose --fwd DRISHTI_BUILD_OPENCV_WORLD=NO
 
   # Upload to server
   - cmd: git clone https://github.com/ruslo/hunter
