--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ if(LEVEL EQUAL 1)
   hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
   hunter_add_package(Eigen)
   hunter_add_package(PNG)
+  hunter_add_package(RapidXML)
   hunter_add_package(dlib)
   hunter_add_package(spdlog)
   hunter_add_package(cereal)
