Switch to 'dist: trusty'

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,26 +8,14 @@ language:
 sudo:
   - false
 
+dist:
+  - trusty
+
 # Install packages differs for container-based infrastructure
 # * https://docs.travis-ci.com/user/migrating-from-legacy/#How-do-I-install-APT-sources-and-packages%3F
-# * http://stackoverflow.com/a/30925448/2288008
 addons:
   apt:
-    sources:
-      - ubuntu-toolchain-r-test
     packages:
-      - python3
-
-      # python3-pip package is not available, use 'easy_install3':
-      # * https://github.com/travis-ci/apt-package-whitelist/issues/768
-      - python3-setuptools # easy_install3
-
-      # https://github.com/travis-ci-tester/travis-test-clang-cxx-11
-      - libstdc++-4.8-dev
-
-      # https://github.com/travis-ci-tester/travis-test-gcc-cxx-11
-      - g++-4.8
-
       # For Qt
       - libegl1-mesa-dev
 
@@ -45,7 +33,7 @@ matrix:
     # LEVEL=1 {
     # Linux {
     - os: linux
-      env: TOOLCHAIN=gcc-4-8-pic-hid-sections LEVEL=1
+      env: TOOLCHAIN=gcc-pic-hid-sections LEVEL=1
     - os: linux
       env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections LEVEL=1
     # }
@@ -66,7 +54,7 @@ matrix:
     # LEVEL=2 {
     # Linux {
     - os: linux
-      env: TOOLCHAIN=gcc-4-8-pic-hid-sections LEVEL=2
+      env: TOOLCHAIN=gcc-pic-hid-sections LEVEL=2
     - os: linux
       env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections LEVEL=2
     # }
@@ -87,7 +75,7 @@ matrix:
     # LEVEL=3 {
     # Linux {
     - os: linux
-      env: TOOLCHAIN=gcc-4-8-pic-hid-sections LEVEL=3
+      env: TOOLCHAIN=gcc-pic-hid-sections LEVEL=3
     - os: linux
       env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections LEVEL=3
     # }
@@ -115,7 +103,7 @@ install:
   # Install Python package 'requests'
   # 'easy_install3' is not installed by 'brew install python3' on OS X 10.9 Maverick
   - if [[ "`uname`" == "Darwin" ]]; then pip3 install requests; fi
-  - if [[ "`uname`" == "Linux" ]]; then travis_retry easy_install3 --user requests==2.10.0; fi
+  - if [[ "`uname`" == "Linux" ]]; then travis_retry pip3 install --user requests; fi
 
   # Install latest Polly toolchains and scripts
   - wget https://github.com/ruslo/polly/archive/master.zip
