--- a/.travis.yml
+++ b/.travis.yml
@@ -32,65 +32,86 @@ matrix:
   include:
     # LEVEL=1 {
     # Linux {
-    - os: linux
+    - stage: Upload level 1
+      os: linux
       env: TOOLCHAIN=gcc-pic-hid-sections LEVEL=1
-    - os: linux
-      env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=1
     # }
 
     # OSX {
-    - os: osx
+    - stage: Upload level 1
+      os: osx
       env: TOOLCHAIN=osx-10-11-hid-sections LEVEL=1
-    - os: osx
+    - stage: Upload level 1
+      os: osx
       env: TOOLCHAIN=ios-nocodesign-9-3-device-hid-sections LEVEL=1
-    - os: osx
+    - stage: Upload level 1
+      os: osx
       osx_image: xcode8.1
       env: TOOLCHAIN=osx-10-12-sanitize-address-hid-sections LEVEL=1
-    - os: osx
+    - stage: Upload level 1
+      os: osx
       env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=1
     # }
     # }
 
     # LEVEL=2 {
     # Linux {
-    - os: linux
+    - stage: Upload level 2
+      os: linux
       env: TOOLCHAIN=gcc-pic-hid-sections LEVEL=2
-    - os: linux
-      env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=2
     # }
 
     # OSX {
-    - os: osx
+    - stage: Upload level 2
+      os: osx
       env: TOOLCHAIN=osx-10-11-hid-sections LEVEL=2
-    - os: osx
+    - stage: Upload level 2
+      os: osx
       env: TOOLCHAIN=ios-nocodesign-9-3-device-hid-sections LEVEL=2
-    - os: osx
+    - stage: Upload level 2
+      os: osx
       osx_image: xcode8.1
       env: TOOLCHAIN=osx-10-12-sanitize-address-hid-sections LEVEL=2
-    - os: osx
+    - stage: Upload level 2
+      os: osx
       env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=2
     # }
     # }
 
     # LEVEL=3 {
     # Linux {
-    - os: linux
+    - stage: Upload level 3
+      os: linux
       env: TOOLCHAIN=gcc-pic-hid-sections LEVEL=3
-    - os: linux
-      env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=3
     # }
 
     # OSX {
-    - os: osx
+    - stage: Upload level 3
+      os: osx
       env: TOOLCHAIN=osx-10-11-hid-sections LEVEL=3
-    - os: osx
+    - stage: Upload level 3
+      os: osx
       env: TOOLCHAIN=ios-nocodesign-9-3-device-hid-sections LEVEL=3
-    - os: osx
+    - stage: Upload level 3
+      os: osx
       osx_image: xcode8.1
       env: TOOLCHAIN=osx-10-12-sanitize-address-hid-sections LEVEL=3
-    - os: osx
+    - stage: Upload level 3
+      os: osx
       env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=3
     # }
+    # }
+
+    # {
+    - stage: Verify Linux + Android
+      os: linux
+      env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=1
+    - stage: Verify Linux + Android
+      os: linux
+      env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=2
+    - stage: Verify Linux + Android
+      os: linux
+      env: TOOLCHAIN=android-ndk-r10e-api-19-armeabi-v7a-neon-hid-sections-lto LEVEL=3
     # }
 
 install:
