--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ dist:
 # * https://docs.travis-ci.com/user/migrating-from-legacy/#How-do-I-install-APT-sources-and-packages%3F
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
       # For Qt
       - libegl1-mesa-dev
@@ -23,6 +25,11 @@ addons:
       - libncurses5:i386
       - libstdc++6:i386
       - zlib1g:i386
+
+      # Default GCC 4.8 is buggy:
+      # * https://github.com/elucideye/drishti/issues/273#issuecomment-301297286
+      - g++-5
+      - gcc-5
 
 env:
   global:
@@ -34,7 +41,7 @@ matrix:
     # Linux {
     - stage: Upload level 1
       os: linux
-      env: TOOLCHAIN=gcc-pic-hid-sections-lto LEVEL=1
+      env: TOOLCHAIN=gcc-5-pic-hid-sections-lto LEVEL=1
     # }
 
     # OSX {
@@ -59,7 +66,7 @@ matrix:
     # Linux {
     - stage: Upload level 2
       os: linux
-      env: TOOLCHAIN=gcc-pic-hid-sections-lto LEVEL=2
+      env: TOOLCHAIN=gcc-5-pic-hid-sections-lto LEVEL=2
     # }
 
     # OSX {
@@ -84,7 +91,7 @@ matrix:
     # Linux {
     - stage: Upload level 3
       os: linux
-      env: TOOLCHAIN=gcc-pic-hid-sections-lto LEVEL=3
+      env: TOOLCHAIN=gcc-5-pic-hid-sections-lto LEVEL=3
     # }
 
     # OSX {
