--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ elseif(LEVEL EQUAL 3)
   if(ANDROID)
     hunter_add_package(Android-SDK)
   endif()
+  hunter_add_package(gauze)
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
