update hunter version; add glm to cache
* add Beast version (dev use only, don’t add to cache yet)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ if(LEVEL EQUAL 1)
   hunter_add_package(PNG)
   hunter_add_package(RapidXML)
   hunter_add_package(dlib)
+  hunter_add_package(glm)
   hunter_add_package(spdlog)
   hunter_add_package(cereal)
   hunter_add_package(flatbuffers)
