--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ elseif(LEVEL EQUAL 3)
     hunter_add_package(Android-SDK)
   endif()
   hunter_add_package(gauze)
+  hunter_add_package(drishti_assets)
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
