disable hunter_add_package(drishti_assets) for cache
in favor of GIT_SUBMODULE use

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,7 +77,8 @@ elseif(LEVEL EQUAL 3)
     hunter_add_package(Android-SDK)
   endif()
   hunter_add_package(gauze)
-  hunter_add_package(drishti_assets)
+  # Use src/3rdparty/drishti-assets for integration work
+  #hunter_add_package(drishti_assets) 
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
