add drishti_assets and drishti_faces as submodules for initial package integration (#81)
* add drishti_assets and drishti_faces as submodules for initial testing

* disable hunter_add_package(drishti_assets) for cache

in favor of GIT_SUBMODULE use

* DRISHTI_UPLOAD_IGNORE_SUBMODULES fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,13 +71,14 @@ elseif(LEVEL EQUAL 3)
     hunter_add_package(ogles_gpgpu)
     hunter_add_package(xgboost)
     hunter_add_package(thread-pool-cpp)
+    hunter_add_package(drishti_assets)
+    hunter_add_package(drishti_faces)
   endif()
   hunter_add_package(nlohmann-json) # test
   if(ANDROID)
     hunter_add_package(Android-SDK)
   endif()
   hunter_add_package(gauze)
-  hunter_add_package(drishti_assets)
 else()
   message(FATAL_ERROR "Unexpected value of LEVEL: '${LEVEL}'")
 endif()
