--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ if(LEVEL EQUAL 1)
     endif()
   endif()
   if(NOT DRISHTI_UPLOAD_IGNORE_SUBMODULES)
+    hunter_add_package(aglet)
     hunter_add_package(boost-pba)
   endif()
   hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
