cereal only serialization
* remove boost::{serialization,iostreams}
* remove boost-pba
* sort entries
* move flatbuffers to experimental section
* move glm to experimental section
* update boost verison to 1.64
* update experimental Beast version to 1.0.0-b84-hunter-0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,35 +45,34 @@ if(LEVEL EQUAL 1)
   endif()
   if(NOT DRISHTI_UPLOAD_IGNORE_SUBMODULES)
     hunter_add_package(aglet)
-    hunter_add_package(boost-pba)
   endif()
-  hunter_add_package(Boost COMPONENTS filesystem system serialization iostreams)
+  hunter_add_package(Boost COMPONENTS filesystem system)
   hunter_add_package(Eigen)
   hunter_add_package(PNG)
   hunter_add_package(RapidXML)
+  hunter_add_package(cereal)
   hunter_add_package(dlib)
+  hunter_add_package(flatbuffers)
   hunter_add_package(glm)
   hunter_add_package(spdlog)
-  hunter_add_package(cereal)
-  hunter_add_package(flatbuffers)
   if(APPLE OR ${is_linux} OR MSVC)
     hunter_add_package(Jpeg)
   endif()
 elseif(LEVEL EQUAL 2)
   hunter_add_package(OpenCV)
 elseif(LEVEL EQUAL 3)
-  hunter_add_package(sse2neon)
   hunter_add_package(ARM_NEON_2_x86_SSE)
-  hunter_add_package(cvmatio) # depends on OpenCV
-  hunter_add_package(half)
   hunter_add_package(GTest)
+  hunter_add_package(cvmatio) # depends on OpenCV
   hunter_add_package(cxxopts)
+  hunter_add_package(half)
+  hunter_add_package(sse2neon)
   if(NOT DRISHTI_UPLOAD_IGNORE_SUBMODULES)
-    hunter_add_package(ogles_gpgpu)
-    hunter_add_package(xgboost)
-    hunter_add_package(thread-pool-cpp)
     hunter_add_package(drishti_assets)
     hunter_add_package(drishti_faces)
+    hunter_add_package(ogles_gpgpu)
+    hunter_add_package(thread-pool-cpp)
+    hunter_add_package(xgboost)
   endif()
   hunter_add_package(nlohmann-json) # test
   if(ANDROID)
