--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 # OSX/Linux (https://github.com/travis-ci-tester/toolchain-table)
 
+# Workaround for https://github.com/travis-ci/travis-ci/issues/8363
 language:
-  - cpp
+  - minimal
 
 # Container-based infrastructure (Linux)
 # * https://docs.travis-ci.com/user/migrating-from-legacy/#How-can-I-use-container-based-infrastructure%3F
@@ -30,6 +31,9 @@ addons:
       # * https://github.com/elucideye/drishti/issues/273#issuecomment-301297286
       - g++-5
       - gcc-5
+
+      # pip3
+      - python3-pip
 
 env:
   global:
