--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,15 @@ addons:
       - g++-5
       - gcc-5
 
+      # For 'acf' toolchain 'libcxx' {
+      - clang-3.8
+      - libc++-dev
+      - libc++abi-dev
+      - libclang-3.8-dev
+      - libclang-common-3.8-dev
+      - libclang1-3.8
+      # }
+
       # pip3
       - python3-pip
 
@@ -133,6 +142,8 @@ matrix:
 install:
   # Info about OS
   - uname -a
+
+  - if [[ "`uname`" == "Linux" ]]; then mkdir -p latest-clang-symlinks && ln -s /usr/bin/clang-3.8 latest-clang-symlinks/clang && ln -s /usr/bin/clang++-3.8 latest-clang-symlinks/clang++ && export PATH="$PWD/latest-clang-symlinks:$PATH"; fi
 
   # Install Python 3
   - if [[ "`uname`" == "Darwin" ]]; then travis_retry brew install python3; fi
