add eos to cmake and eos deps to config
* update hunter
* add hunter_add_package for eos + deps
* bump version of eigen3-nnls (gcc fix)
* add explicit nanoflann version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,9 @@ if(LEVEL EQUAL 1)
   endif()
 elseif(LEVEL EQUAL 2)
   hunter_add_package(OpenCV)
+  hunter_add_package(eigen3-nnls)
+  hunter_add_package(nanoflann)
+  hunter_add_package(eos) # OpenCV, Boost, Eigen, cereal, glm, nanoflann, eigen3-nnls 
 elseif(LEVEL EQUAL 3)
   hunter_add_package(ARM_NEON_2_x86_SSE)
   hunter_add_package(GTest)
