--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,9 @@ elseif(LEVEL EQUAL 3)
   hunter_add_package(drishti_assets)
   hunter_add_package(drishti_faces)
   hunter_add_package(ogles_gpgpu)
+  if(NOT (DRISHTI_UPLOAD_IGNORE_SUBMODULES AND DRISHTI_ACF_USE_SUBMODULE))
+    hunter_add_package(acf)
+  endif()
   hunter_add_package(thread-pool-cpp)
   hunter_add_package(xgboost)
   hunter_add_package(nlohmann_json) # test
