add sha1 of polly zip for debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -158,6 +158,7 @@ install:
 
   # Install latest Polly toolchains and scripts
   - wget https://github.com/ruslo/polly/archive/master.zip
+  - openssl sha1 master.zip
   - unzip master.zip
   - POLLY_ROOT="`pwd`/polly-master"
   - export PATH="${POLLY_ROOT}/bin:${PATH}"
