--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,7 @@ matrix:
 
     # OSX {
     - stage: Upload level 1
+      os: osx
       osx_image: xcode8.3
       env: TOOLCHAIN=osx-10-12-hid-sections CONFIG=Release LEVEL=1
     - stage: Upload level 1
@@ -98,6 +99,7 @@ matrix:
 
     # OSX {
     - stage: Upload level 2
+      os: osx
       osx_image: xcode8.3
       env: TOOLCHAIN=osx-10-12-hid-sections CONFIG=Release LEVEL=2
     - stage: Upload level 2
@@ -126,6 +128,7 @@ matrix:
 
     # OSX {
     - stage: Upload level 3
+      os: osx      
       osx_image: xcode8.3
       env: TOOLCHAIN=osx-10-12-hid-sections CONFIG=Release LEVEL=3
     - stage: Upload level 3
