--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ addons:
 
       # Default GCC 4.8 is buggy:
       # * https://github.com/elucideye/drishti/issues/273#issuecomment-301297286
-      - g++-5
-      - gcc-5
+#      - g++-5
+#      - gcc-5
 
       # For 'acf' toolchain 'libcxx' {
       - clang-3.9
@@ -150,7 +150,7 @@ install:
   # Info about OS
   - uname -a
 
-  - if [[ "`uname`" == "Linux" ]]; then mkdir -p latest-clang-symlinks && ln -s /usr/bin/clang-3.8 latest-clang-symlinks/clang && ln -s /usr/bin/clang++-3.8 latest-clang-symlinks/clang++ && export PATH="$PWD/latest-clang-symlinks:$PATH"; fi
+  - if [[ "`uname`" == "Linux" ]]; then mkdir -p latest-clang-symlinks && ln -s /usr/bin/clang-3.9 latest-clang-symlinks/clang && ln -s /usr/bin/clang++-3.9 latest-clang-symlinks/clang++ && export PATH="$PWD/latest-clang-symlinks:$PATH"; fi
 
   # Install Python 3
   - if [[ "`uname`" == "Darwin" ]]; then travis_retry brew install python3; fi
