--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ matrix:
       env: TOOLCHAIN=gcc-5-pic-hid-sections-lto CONFIG=Release LEVEL=1
     - stage: Upload level 1
       os: linux
-      env: TOOLCHAIN=libcxx CONFIG=Release LEVEL=1
+      env: TOOLCHAIN=libcxx-fpic-hid-sections CONFIG=Release LEVEL=1
     # }
 
     # OSX {
@@ -95,7 +95,7 @@ matrix:
       env: TOOLCHAIN=gcc-5-pic-hid-sections-lto CONFIG=Release LEVEL=2
     - stage: Upload level 2
       os: linux
-      env: TOOLCHAIN=libcxx CONFIG=Release LEVEL=2
+      env: TOOLCHAIN=libcxx-fpic-hid-sections CONFIG=Release LEVEL=2
     # }
 
     # OSX {
@@ -124,7 +124,7 @@ matrix:
       env: TOOLCHAIN=gcc-5-pic-hid-sections-lto CONFIG=Release LEVEL=3
     - stage: Upload level 3
       os: linux
-      env: TOOLCHAIN=libcxx CONFIG=Release LEVEL=3
+      env: TOOLCHAIN=libcxx-fpic-hid-sections CONFIG=Release LEVEL=3
     # }
 
     # OSX {
